# ai-hist

./: .gitignore  Cargo.toml  README.md  ai-hist  test_ai_hist.py
.claude/: settings.json
.github/workflows/: publish.yml
crates/ai-hist/: Cargo.toml
crates/ai-hist-core/: Cargo.toml
crates/ai-hist-core/src/: lib.rs
crates/ai-hist/src/: main.rs
mcp-package/: README.md  package.json
memory/workspace/.relay/: state.json
memory/workspace/.relay/outbox/: capabilities.json
scripts/: verify-e2e.sh
sdk-ts/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
sdk-ts/src/: index.ts  jsonl-sources.ts  mcp-server.ts  mcp-smoke.test.ts
