[package]
name = "ai-hist-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ai-hist"
path = "src/main.rs"

[dependencies]
ai-hist-core = { path = "../ai-hist-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"

